# nu-on-web

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  Makefile  README.md  Taskfile.yml  flake.nix  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy.yml
assets/: cssMode-3daLbQLx.js  cssMode-BTpDSngk.js  cssMode-BdP0f3iC.js  cssMode-BnTjW92s.js  cssMode-Bp_Afxbl.js  cssMode-C0cg0sNn.js  cssMode-Czv_ORc6.js  cssMode-D2tr9MuL.js  cssMode-D536Mv1g.js  cssMode-DrPYp3E0.js  cssMode-FGCZI9OW.js  freemarker2--bqGdN5U.js  freemarker2--hjSCUu9.js  freemarker2-B28Q1FTO.js  freemarker2-BFWoLd53.js  freemarker2-BPRFAxjC.js  freemarker2-BaWgzTDh.js  freemarker2-C1InSTfE.js  freemarker2-CzUAv86b.js  freemarker2-DlCLF6Od.js  freemarker2-tmOf-PDf.js  freemarker2-xUv6KoFP.js  handlebars-2g7DuYK_.js  handlebars-8-OPtDjS.js  handlebars-BPSgl1fb.js  handlebars-BqujUJ0h.js  handlebars-BuQGqiV4.js  handlebars-C1_7HA2T.js  handlebars-CklxC4oj.js  handlebars-D6RIUGQy.js  handlebars-DgGGWn58.js  handlebars-V84TKKe0.js  handlebars-VC9TwnVr.js  html-B1HQvKfL.js  html-BgItLbc4.js  html-Cuzdncfo.js  html-D1mLQHnq.js  html-D5eaVZhO.js  html-D9ZO6AKT.js  html-DUuJw0H2.js  (+144 more)
nushell/: Cargo.toml
nushell/crates/nu-command/: Cargo.toml
patches/: web-tree-sitter.patch
playground/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  vite.config.ts
playground/src/: App.svelte  App.tsx  Playground.svelte  app.css  index.css  main.ts
playground/src/components/: Chat.svelte  Editor.svelte  FileUpload.svelte  FilesBar.svelte  MessageItem.svelte  Prompt.svelte  Replay.svelte
playground/src/lib/: constants.ts  monaco-config.ts  nushell.ts  types.ts  utils.ts
playground/src/lib/editor-ops/: auto-completions.ts  commands-decorations.ts  definitions-provider.ts  index.ts
playground/src/lib/stores/: code.ts
src/: cat.rs  engine.rs  lib.rs  ls.rs  open.rs  rm.rs  types.rs  utils.rs  zenfs.rs
src/commands/: cat.rs  ls.rs  mod.rs  rm.rs
src/completions/: attribute_completions.rs
