[package]
name = "nushell-wasm"
version = "0.1.0"
authors = ["Itay Sin Malia <itays.malia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.104"
console_error_panic_hook = { version = "0.1.7", optional = true }
nu-cmd-lang = { version = "0.107.0", features = [], default-features = false }
nu-utils = { version = "0.107.0", features = [], default-features = false }
nu-protocol = { version = "0.107.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
nu-engine = { version = "0.107.0", default-features = false }
nu-command = { version = "0.107.0", default-features = false, features = [
  "js",
  "rand",
] }
uuid = { version = "1.18.1", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
nu-parser = { version = "0.107.0", default-features = false }
nu-cmd-extra = "0.107.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.81"
tsify = { version = "0.5.5", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
